--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <!--    TODO Подумати, як владнати проблему з відображенням ActionBar, бо його немає бути. (підказка: це вже зроблено, але зараз лише для одної актівіті)-->
+    <!--    TODO В ресурсі @string/app_name, що присвоюється android:label можна змінити назву файлу, щоб назва була логічна до проекту-->
+    <!--    TODO Так само перейменувати назву теми, щоб була очевидніша-->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
